# semantic-segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cvrsegmentation/: instance_matching.py  io.py  prediction.py  training.py
notebooks/: JADRO-delisa-2024-250.ipynb  JADRO-delisa-2024-vf40.ipynb  step-by-step.md
semseg/: dataset.py  domain.py  imageutils.py
src/semseg/: dataset.py  domain.py  exp.py  feret.py  helpers.py  imageutils.py  instance_matching.py  io.py  params_manual.py  prediction.py  results.py  training.py  visualisation.py
